# linear-regression-pfn

./: .gitignore  CLAUDE.md  README.md  TRAINING.md  baselines.py  evals.py  exp_length_extrapolation.py  exp_memorise_vs_generalise.py  exp_predictive_resampling_checkpoints.py  exp_predictive_resampling_posterior.py  exp_predictive_resampling_prior.py  exp_raventos_plot_replicate.py  pyproject.toml  raventos_train.py  requirements.txt  train.py  train_parallel.py  train_test.py
.claude/: settings.local.json
experiments/: exp_00_predictive_resampling.py  exp_01_raventos_plots.py  exp_02_pdf_comparison.py  exp_codelength_ridge_vs_pt.py  exp_length_extrapolation.py  exp_loss_across_checkpoints.py  exp_memorise_vs_generalise.py  exp_model_checkpoints.py  exp_model_predictives_fixed_prompt_across_checkpoints.py  exp_predictive_resampling.py  exp_predictive_resampling_checkpoints.py  exp_predictive_resampling_posterior.py  exp_predictive_resampling_posterior_marginal.py  exp_predictive_resampling_prior.py  exp_raventos_plot_replicate.py  experiment_configs.py  experiment_utils.py
models/: autoregressive_pfn_attention.py  config.py  model.py  model_config.py  pfn_embedding.py
predictive_resampling/: __init__.py  predictive_resampling.py  predictive_resampling_plots.py  predictive_resampling_test.py
samplers/: tasks.py
tests/: test_dmmse_vectorized.py  test_predictive_resampling.py  test_train_parallel.py
